<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="363dp"
        android:layout_height="149dp"
        android:background="@drawable/bg_search"
        android:backgroundTint="#014164"
        android:text=""
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="566dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="426dp"
        android:layout_height="12dp"
        android:background="@drawable/bg_search"

        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="505dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester2"
        android:textColor="#014164
"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="526dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="164dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="91dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/my_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text"
        android:layout_width="357dp"
        android:layout_height="44dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="232dp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/year1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintStart_toStartOf="@+id/text"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/year2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/year3"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/year4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester1"
        android:textColor="#014164
"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bg_search"

    <TextView
        android:id="@+id/textView8"
        android:layout_width="363dp"
        android:layout_height="149dp"
        android:background="@drawable/bg_search"
        android:backgroundTint="#014164"
        android:text=""
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="343dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="413dp"
        android:layout_height="278dp"
        app:srcCompat="@drawable/my_cover"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-108dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="116dp"
        android:layout_height="28dp"
        android:text="Vichea Srin"
        android:textColor="#014164"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IT Engineering - Generation 7"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="420dp"
        android:layout_height="13dp"
        android:background="@drawable/bg_search"

        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subject"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Credit"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="355dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Credit"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="578dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="382dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="606dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="630dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="436dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="654dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="463dp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="678dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Web and cloud Technologies II"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Web and cloud Technologies II"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView33"
        tools:layout_editor_absoluteX="43dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="55dp"
        android:layout_height="15dp"
        android:text="Computer"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="55dp"
        android:layout_height="15dp"
        android:text="Computer"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Software Engineering"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Software Engineering"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView35"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mobile Application Devlopment I"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mobile Application Devlopment I"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView36"
        tools:layout_editor_absoluteX="42dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subject"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="578dp" />

</androidx.constraintlayout.widget.ConstraintLayout>